vendor/proc-macro-error-1.0.4/tests/ui/option_ext.stderr
error: Option::expect_or_abort() test
 --> $DIR/option_ext.rs:4:1
  |
4 | option_ext!(one, two);
  | ^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
