vendor/proc-macro-error-1.0.4/tests/ui/option_ext.rs
extern crate test_crate;
use test_crate::*;

option_ext!(one, two);

fn main() {}
